Implemented full pipeline with transforms and functions

--- a/src/main/java/org/kettle/beam/steps/beamoutput/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/beamoutput/messages/messages_en_US.properties
@@ -1,3 +1,5 @@
 BeamOutputDialog.DialogTitle = Beam Output
 BeamOutputDialog.OutputLocation = Output location
+BeamOutputDialog.FilePrefix = File prefix
+BeamOutputDialog.Windowed = Windowed?
 BeamOutputDialog.FileDefinition = File definition to use
