Working end-to-end unit test with Dummy step, 100 rows

--- a/src/main/java/org/kettle/beam/steps/beamoutput/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/beamoutput/messages/messages_en_US.properties
@@ -1,5 +1,6 @@
 BeamOutputDialog.DialogTitle = Beam Output
 BeamOutputDialog.OutputLocation = Output location
 BeamOutputDialog.FilePrefix = File prefix
-BeamOutputDialog.Windowed = Windowed?
+BeamOutputDialog.Windowed = Windowed (unsupported)?
 BeamOutputDialog.FileDefinition = File definition to use
+BeamOutputDialog.FileSuffix = File suffix
