Issues #2 and #3 + bug fixes

--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -13,3 +13,17 @@ FileDefinitionDialog.Fields.Column.FieldLength = Length
 FileDefinitionDialog.Fields.Column.FieldPrecision = Precision
 FileDefinitionDialog.Fields.Column.FieldFormat = Format
 
+BeamJobConfigDialog.Shell.Title = Beam Job Configuration
+BeamJobConfigDialog.Name.Label = Name
+BeamJobConfigDialog.Description.Label = Description
+BeamJobConfigDialog.Runner.Label = Runner
+BeamJobConfigDialog.UserAgent.Label = User Agent
+BeamJobConfigDialog.TempLocation.Label = Temporary location
+BeamJobConfigDialog.GcpGroup.Title = Google Cloud Platform - Dataflow
+BeamJobConfigDialog.GcpProjectId.Label = Project ID
+BeamJobConfigDialog.GcpAppName.Label = App name
+BeamJobConfigDialog.GcpStagingLocation.Label = Staging location
+BeamJobConfigDialog.Parameters.Label = Variables / Parameters to set:
+BeamJobConfigDialog.NoNameDialog.Title = No name given
+BeamJobConfigDialog.NoNameDialog.Message = Please give this job configuration a name
+
