--- a/src/main/java/org/kettle/beam/perspective/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/perspective/messages/messages_en_US.properties
@@ -17,3 +17,27 @@ BeamHelper.DeleteDefinitionConfirmation.Message = Are you sure you want to delet
 BeamHelper.Error.ErrorDeletingDefinition.Title = Error!
 BeamHelper.Error.ErrorDeletingDefinition.Message = There was an error deleting the file definition!
 
+
+BeamHelper.Error.BeamJobConfigExists.Title = Beam Job Config exists
+BeamHelper.Error.BeamJobConfigExists.Message = This job config already exists! Do you want to overwrite it?
+BeamHelper.Error.ErrorSavingJobConfig.Title = Error
+BeamHelper.Error.ErrorSavingJobConfig.Message = Error saving Beam job config
+
+BeamHelper.SelectJobConfigToEdit.Title = Select job config
+BeamHelper.SelectJobConfigToEdit.Message = Select the Beam job configuration to edit:
+
+BeamHelper.ErrorEditingJobConfig.Message = Error editing Beam job config
+
+
+BeamHelper.SelectJobConfigToDelete.Title = Select job to delete
+BeamHelper.SelectJobConfigToDelete.Message = Select the Beam Job Configuration to delete:
+BeamHelper.DeleteJobConfigConfirmation.Title = Delete?
+BeamHelper.DeleteJobConfigConfirmation.Message = Are you sure you want to delete this Beam job configuration?
+BeamHelper.Error.ErrorDeletingJobConfig.Title = Error
+BeamHelper.Error.ErrorDeletingJobConfig.Message = There was an error deleting this Beam job configuration.
+
+BeamHelper.SelectBeamJobConfigToRun.Title = Select Config
+BeamHelper.SelectBeamJobConfigToRun.Message = Select the Beam Job Configuration to use:
+
+BeamHelper.ErrorRunningTransOnBeam.Title = Error
+BeamHelper.ErrorRunningTransOnBeam.Message = There was an error running your transformation on Beam
