Improved tests, plugins option, class loading fixes, ...

--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -23,6 +23,7 @@ BeamJobConfigDialog.GcpGroup.Title = Google Cloud Platform - Dataflow
 BeamJobConfigDialog.GcpProjectId.Label = Project ID
 BeamJobConfigDialog.GcpAppName.Label = App name
 BeamJobConfigDialog.GcpStagingLocation.Label = Staging location
+BeamJobConfigDialog.PluginsToStage.Label = Plugin folders to stage (, separated)
 BeamJobConfigDialog.Parameters.Label = Variables / Parameters to set:
 BeamJobConfigDialog.NoNameDialog.Title = No name given
 BeamJobConfigDialog.NoNameDialog.Message = Please give this job configuration a name
