--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -14,17 +14,26 @@ FileDefinitionDialog.Fields.Column.FieldPrecision = Precision
 FileDefinitionDialog.Fields.Column.FieldFormat = Format
 
 BeamJobConfigDialog.Shell.Title = Beam Job Configuration
+BeamJobConfigDialog.NoNameDialog.Title = No name given
+BeamJobConfigDialog.NoNameDialog.Message = Please give this job configuration a name
+
+
 BeamJobConfigDialog.Name.Label = Name
 BeamJobConfigDialog.Description.Label = Description
 BeamJobConfigDialog.Runner.Label = Runner
 BeamJobConfigDialog.UserAgent.Label = User Agent
 BeamJobConfigDialog.TempLocation.Label = Temporary location
-BeamJobConfigDialog.GcpGroup.Title = Google Cloud Platform - Dataflow
 BeamJobConfigDialog.GcpProjectId.Label = Project ID
 BeamJobConfigDialog.GcpAppName.Label = App name
 BeamJobConfigDialog.GcpStagingLocation.Label = Staging location
 BeamJobConfigDialog.PluginsToStage.Label = Plugin folders to stage (, separated)
-BeamJobConfigDialog.Parameters.Label = Variables / Parameters to set:
-BeamJobConfigDialog.NoNameDialog.Title = No name given
-BeamJobConfigDialog.NoNameDialog.Message = Please give this job configuration a name
+BeamJobConfigDialog.InitialNumberOfWorkers.Label = Initial number of workers
+BeamJobConfigDialog.MaximumNumberOfWorkers.Label = Maximum number of workers
+BeamJobConfigDialog.GcpWorkerMachineType.Label = Worker Machine Type
+BeamJobConfigDialog.GcpWorkerDiskType.Label = Worker Disk Type
+BeamJobConfigDialog.GcpDiskSizeGb.Label = Disk Size (GB)
+BeamJobConfigDialog.GcpRegion.Label = Region
+BeamJobConfigDialog.GcpZone.Label = Zone
+BeamJobConfigDialog.Streaming.Label = Streaming?
+BeamJobConfigDialog.AutoScalingAlgorithm.Label = Auto scaling algorithm
 
