--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -21,19 +21,34 @@ BeamJobConfigDialog.NoNameDialog.Message = Please give this job configuration a 
 BeamJobConfigDialog.Name.Label = Name
 BeamJobConfigDialog.Description.Label = Description
 BeamJobConfigDialog.Runner.Label = Runner
+
 BeamJobConfigDialog.UserAgent.Label = User Agent
 BeamJobConfigDialog.TempLocation.Label = Temporary location
+BeamJobConfigDialog.PluginsToStage.Label = Plugin folders to stage (, separated)
+
 BeamJobConfigDialog.GcpProjectId.Label = Project ID
 BeamJobConfigDialog.GcpAppName.Label = App name
 BeamJobConfigDialog.GcpStagingLocation.Label = Staging location
-BeamJobConfigDialog.PluginsToStage.Label = Plugin folders to stage (, separated)
-BeamJobConfigDialog.InitialNumberOfWorkers.Label = Initial number of workers
-BeamJobConfigDialog.MaximumNumberOfWorkers.Label = Maximum number of workers
+BeamJobConfigDialog.GcpInitialNumberOfWorkers.Label = Initial number of workers
+BeamJobConfigDialog.GcpMaximumNumberOfWorkers.Label = Maximum number of workers
 BeamJobConfigDialog.GcpWorkerMachineType.Label = Worker Machine Type
 BeamJobConfigDialog.GcpWorkerDiskType.Label = Worker Disk Type
 BeamJobConfigDialog.GcpDiskSizeGb.Label = Disk Size (GB)
 BeamJobConfigDialog.GcpRegion.Label = Region
 BeamJobConfigDialog.GcpZone.Label = Zone
-BeamJobConfigDialog.Streaming.Label = Streaming?
-BeamJobConfigDialog.AutoScalingAlgorithm.Label = Auto scaling algorithm
+BeamJobConfigDialog.GcpStreaming.Label = Streaming?
+BeamJobConfigDialog.GcpAutoScalingAlgorithm.Label = Auto scaling algorithm
 
+
+
+
+BeamJobConfigDialog.SparkMaster.Label = The url of the spark master to connect to, (e.g. spark://host:port)
+BeamJobConfigDialog.SparkBatchIntervalMillis.Label = Batch interval for Spark streaming in milliseconds
+BeamJobConfigDialog.SparkCheckpointDir.Label = A checkpoint directory for streaming resilience, ignored in batch
+BeamJobConfigDialog.SparkCheckpointDurationMillis.Label = The period to checkpoint (in Millis)
+BeamJobConfigDialog.sparkEnableSparkMetricSinks.Label = Send aggregator values to Spark's metric sinks?
+BeamJobConfigDialog.SparkMaxRecordsPerBatch.Label = Max records per micro-batch. For streaming sources only
+BeamJobConfigDialog.SparkMinReadTimeMillis.Label = Minimum time to spend on read, for each micro-batch
+BeamJobConfigDialog.SparkReadTimePercentage.Label = The percentage of a micro-batch dedicated to reading from unbound sources.
+BeamJobConfigDialog.SparkBundleSize.Label = Used for splitting BoundedSources. Most effective when used with Spark dynamicAllocation
+BeamJobConfigDialog.SparkStorageLevel.Label = Batch default storage level
