--- a/src/main/java/org/kettle/beam/steps/io/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/io/messages/messages_en_US.properties
@@ -1,3 +1,7 @@
+BeamInputDialog.DialogTitle = Beam Input
+BeamInputDialog.InputLocation = Input location
+BeamInputDialog.FileDefinition = File definition to use
+
 BeamOutputDialog.DialogTitle = Beam Output
 BeamOutputDialog.OutputLocation = Output location
 BeamOutputDialog.FilePrefix = File prefix
