Step inclusion fix, pub/sub subscribe

--- a/src/main/java/org/kettle/beam/steps/io/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/io/messages/messages_en_US.properties
@@ -5,6 +5,6 @@ BeamInputDialog.FileDefinition = File definition to use
 BeamOutputDialog.DialogTitle = Beam Output
 BeamOutputDialog.OutputLocation = Output location
 BeamOutputDialog.FilePrefix = File prefix
-BeamOutputDialog.Windowed = Windowed (unsupported)?
+BeamOutputDialog.Windowed = Windowed writes?
 BeamOutputDialog.FileDefinition = File definition to use
 BeamOutputDialog.FileSuffix = File suffix
