--- a/src/main/java/org/kettle/beam/steps/pubsub/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/pubsub/messages/messages_en_US.properties
@@ -4,6 +4,7 @@ BeamPublishDialog.MessageType = The type of message to publish
 BeamPublishDialog.MessageField = The field to use as message
 
 BeamSubscribeDialog.DialogTitle = Beam Subscribe
+BeamSubscribeDialog.Subscription = Subscription name
 BeamSubscribeDialog.Topic = Topic to subscribe to
 BeamSubscribeDialog.MessageType = The type of message to read
 BeamSubscribeDialog.MessageField = The output field name
