--- a/src/main/java/org/kettle/beam/steps/window/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/window/messages/messages_en_US.properties
@@ -2,3 +2,6 @@ BeamWindowDialog.DialogTitle = Beam Window
 BeamWindowDialog.WindowType = Window type
 BeamWindowDialog.Duration = Window size (duration in seconds)
 BeamWindowDialog.Every = Every x seconds (Sliding windows)
+
+BeamTimestampDialog.DialogTitle = Beam Timestamp
+BeamTimestampDialog.FieldName = The time field to use. Uses system time if blank  
