Issue #21 (NPE fix) for 0.2.0

--- a/src/main/java/org/kettle/beam/steps/bq/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/bq/messages/messages_en_US.properties
@@ -4,6 +4,9 @@ BeamBQInputDialog.DatasetId = Data Set ID
 BeamBQInputDialog.TableId = Table ID
 BeamBQInputDialog.Query = Query (blank mean everything)
 BeamBQInputDialog.Fields = Return fields selection:
+BeamBQInputDialog.Fields.Column.Name = BQ Field name
+BeamBQInputDialog.Fields.Column.NewName = Rename to... (optional)
+BeamBQInputDialog.Fields.Column.KettleType = Kettle data type
 
 BeamBQOutputDialog.DialogTitle = Beam BigQuery Output
 BeamBQOutputDialog.ProjectId = Project ID
