--- a/src/main/java/org/kettle/beam/steps/bq/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/bq/messages/messages_en_US.properties
@@ -2,7 +2,7 @@ BeamBQInputDialog.DialogTitle = Beam BigQuery Input
 BeamBQInputDialog.ProjectId = Project ID
 BeamBQInputDialog.DatasetId = Data Set ID
 BeamBQInputDialog.TableId = Table ID
-BeamBQInputDialog.Query = Query (blank mean everything)
+BeamBQInputDialog.Query = Query. Blank means everything. Manually specify result fields below:
 BeamBQInputDialog.Fields = Return fields selection:
 BeamBQInputDialog.Fields.Column.Name = BQ Field name
 BeamBQInputDialog.Fields.Column.NewName = Rename to... (optional)
