--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -43,6 +43,7 @@ BeamJobConfigDialog.GcpAutoScalingAlgorithm.Label = Auto scaling algorithm
 
 
 BeamJobConfigDialog.SparkMaster.Label = The url of the spark master to connect to, (e.g. spark://host:port)
+BeamJobConfigDialog.SparkDeployFolder.Label = Folder to deploy Spark submit artifacts in
 BeamJobConfigDialog.SparkBatchIntervalMillis.Label = Batch interval for Spark streaming in milliseconds
 BeamJobConfigDialog.SparkCheckpointDir.Label = A checkpoint directory for streaming resilience, ignored in batch
 BeamJobConfigDialog.SparkCheckpointDurationMillis.Label = The period to checkpoint (in Millis)
