--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -53,3 +53,24 @@ BeamJobConfigDialog.SparkMinReadTimeMillis.Label = Minimum time to spend on read
 BeamJobConfigDialog.SparkReadTimePercentage.Label = The percentage of a micro-batch dedicated to reading from unbound sources.
 BeamJobConfigDialog.SparkBundleSize.Label = Used for splitting BoundedSources. Most effective when used with Spark dynamicAllocation
 BeamJobConfigDialog.SparkStorageLevel.Label = Batch default storage level
+
+
+BeamJobConfigDialog.FlinkMaster.Label = Address of the Flink Master, either \"host:port\", [local], [collection] or [auto]
+BeamJobConfigDialog.FlinkParallelism.Label = The degree of parallelism to be used when distributing operations onto workers
+BeamJobConfigDialog.FlinkCheckpointingInterval.Label = The interval in ms at which to trigger checkpoints
+BeamJobConfigDialog.FlinkCheckpointingMode.Label = The checkpointing mode that defines consistency guarantee
+BeamJobConfigDialog.FlinkCheckpointTimeoutMillis.Label = The max time in ms that a checkpoint may take before being discarded
+BeamJobConfigDialog.FlinkMinPauseBetweenCheckpoints.Label = The minimal pause in ms before the next checkpoint is triggered
+BeamJobConfigDialog.FlinkNumberOfExecutionRetries.Label = Sets the number of times that failed tasks are re-executed. (0=disable)
+BeamJobConfigDialog.FlinkExecutionRetryDelay.Label = Sets the delay in ms between executions
+BeamJobConfigDialog.FlinkObjectReuse.Label = Sets the behavior of reusing objects
+BeamJobConfigDialog.FlinkStateBackend.Label = Sets the state backend to use in streaming mode. Otherwise the default is read from the Flink config
+BeamJobConfigDialog.FlinkEnableMetrics.Label = Enable/disable Beam metrics in Flink Runner (true/false)
+BeamJobConfigDialog.FlinkExternalizedCheckpointsEnabled.Label = Enables or disables externalized checkpoints
+BeamJobConfigDialog.FlinkRetainExternalizedCheckpointsOnCancellation.Label = Sets the behavior of externalized checkpoints on cancellation
+BeamJobConfigDialog.FlinkMaxBundleSize.Label = The maximum number of elements in a bundle
+BeamJobConfigDialog.FlinkMaxBundleTimeMills.Label = The maximum time to wait before finalising a bundle (in ms)
+BeamJobConfigDialog.FlinkShutdownSourcesOnFinalWatermark.Label = If set, shutdown sources when their watermark reaches +Inf
+BeamJobConfigDialog.FlinkLatencyTrackingInterval.Label = Interval in ms for sending latency tracking marks from the sources to the sinks
+BeamJobConfigDialog.FlinkAutoWatermarkInterval.Label = The interval in ms for automatic watermark emission
+BeamJobConfigDialog.FlinkExecutionModeForBatch.Label = Flink mode for data exchange of batch pipelines
