--- a/src/main/java/org/kettle/beam/steps/bq/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/steps/bq/messages/messages_en_US.properties
@@ -12,3 +12,7 @@ BeamBQOutputDialog.DialogTitle = Beam BigQuery Output
 BeamBQOutputDialog.ProjectId = Project ID
 BeamBQOutputDialog.DatasetId = Data Set ID
 BeamBQOutputDialog.TableId = Table ID
+BeamBQOutputDialog.CreateIfNeeded = Create table if needed
+BeamBQOutputDialog.TruncateTable = Truncate table
+BeamBQOutputDialog.FailIfNotEmpty = Fail if the table is not empty
+
