--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -25,6 +25,7 @@ BeamJobConfigDialog.Runner.Label = Runner
 BeamJobConfigDialog.UserAgent.Label = User Agent
 BeamJobConfigDialog.TempLocation.Label = Temporary location
 BeamJobConfigDialog.PluginsToStage.Label = Plugin folders to stage (, separated)
+BeamJobConfigDialog.StreamingKettleStepsFlushInterval.Label = Streaming flush interval for buffered step data (s)
 
 BeamJobConfigDialog.GcpProjectId.Label = Project ID
 BeamJobConfigDialog.GcpAppName.Label = App name
@@ -39,9 +40,7 @@ BeamJobConfigDialog.GcpZone.Label = Zone
 BeamJobConfigDialog.GcpStreaming.Label = Streaming?
 BeamJobConfigDialog.GcpAutoScalingAlgorithm.Label = Auto scaling algorithm
 
-
-
-
+BeamJobConfigDialog.SparkLocal.Label = Use a local embedded Spark engine?
 BeamJobConfigDialog.SparkMaster.Label = The url of the spark master to connect to, (e.g. spark://host:port)
 BeamJobConfigDialog.SparkDeployFolder.Label = Folder to deploy Spark submit artifacts in
 BeamJobConfigDialog.SparkBatchIntervalMillis.Label = Batch interval for Spark streaming in milliseconds
@@ -54,7 +53,7 @@ BeamJobConfigDialog.SparkReadTimePercentage.Label = The percentage of a micro-ba
 BeamJobConfigDialog.SparkBundleSize.Label = Used for splitting BoundedSources. Most effective when used with Spark dynamicAllocation
 BeamJobConfigDialog.SparkStorageLevel.Label = Batch default storage level
 
-
+BeamJobConfigDialog.FlinkLocal.Label = Use a local embedded Flink engine?
 BeamJobConfigDialog.FlinkMaster.Label = Address of the Flink Master, either \"host:port\", [local], [collection] or [auto]
 BeamJobConfigDialog.FlinkParallelism.Label = The degree of parallelism to be used when distributing operations onto workers
 BeamJobConfigDialog.FlinkCheckpointingInterval.Label = The interval in ms at which to trigger checkpoints
