Adding optional step and xp plugins to the job config, improved UI for fat jar builder

--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -25,6 +25,13 @@ BeamJobConfigDialog.Runner.Label = Runner
 BeamJobConfigDialog.UserAgent.Label = User Agent
 BeamJobConfigDialog.TempLocation.Label = Temporary location
 BeamJobConfigDialog.PluginsToStage.Label = Plugin folders to stage (, separated)
+BeamJobConfigDialog.StepPluginClasses.Label = Step plugin classes to use
+BeamJobConfigDialog.StepPluginClasses.Button = Find
+BeamJobConfigDialog.XpPluginClasses.Label = Extension point plugin classes to use
+BeamJobConfigDialog.XpPluginClasses.Button = Find
+
+BeamJobConfigDialog.FatJar.Label = Fat jar (file location) to use for execution
+BeamJobConfigDialog.FatJar.Button = Build
 BeamJobConfigDialog.StreamingKettleStepsFlushInterval.Label = Streaming flush interval for buffered step data (s)
 
 BeamJobConfigDialog.GcpProjectId.Label = Project ID
