--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -25,9 +25,9 @@ BeamJobConfigDialog.Runner.Label = Runner
 BeamJobConfigDialog.UserAgent.Label = User Agent
 BeamJobConfigDialog.TempLocation.Label = Temporary location
 BeamJobConfigDialog.PluginsToStage.Label = Plugin folders to stage (, separated)
-BeamJobConfigDialog.StepPluginClasses.Label = Step plugin classes to use
+BeamJobConfigDialog.StepPluginClasses.Label = Extra step plugin classes not in plugins
 BeamJobConfigDialog.StepPluginClasses.Button = Find
-BeamJobConfigDialog.XpPluginClasses.Label = Extension point plugin classes to use
+BeamJobConfigDialog.XpPluginClasses.Label = Extra XP plugin classes not in plugins
 BeamJobConfigDialog.XpPluginClasses.Button = Find
 
 BeamJobConfigDialog.FatJar.Label = Fat jar (file location) to use for execution
