--- a/src/main/java/org/kettle/beam/perspective/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/perspective/messages/messages_en_US.properties
@@ -41,3 +41,6 @@ BeamHelper.SelectBeamJobConfigToRun.Message = Select the Beam Job Configuration 
 
 BeamHelper.ErrorRunningTransOnBeam.Title = Error
 BeamHelper.ErrorRunningTransOnBeam.Message = There was an error running your transformation on Beam
+
+BeamHelper.SelectJobConfigForFatJar.Title = Select Beam Job Config
+BeamHelper.SelectJobConfigForFatJar.Message = Select the job config to know which plugins to include in the fat jar:
