--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -71,7 +71,7 @@ BeamJobConfigDialog.FlinkNumberOfExecutionRetries.Label = Sets the number of tim
 BeamJobConfigDialog.FlinkExecutionRetryDelay.Label = Sets the delay in ms between executions
 BeamJobConfigDialog.FlinkObjectReuse.Label = Sets the behavior of reusing objects
 BeamJobConfigDialog.FlinkStateBackend.Label = Sets the state backend to use in streaming mode. Otherwise the default is read from the Flink config
-BeamJobConfigDialog.FlinkEnableMetrics.Label = Enable/disable Beam metrics in Flink Runner (true/false)
+BeamJobConfigDialog.FlinkDisableMetrics.Label = Disable Beam metrics in Flink Runner (true/false)
 BeamJobConfigDialog.FlinkExternalizedCheckpointsEnabled.Label = Enables or disables externalized checkpoints
 BeamJobConfigDialog.FlinkRetainExternalizedCheckpointsOnCancellation.Label = Sets the behavior of externalized checkpoints on cancellation
 BeamJobConfigDialog.FlinkMaxBundleSize.Label = The maximum number of elements in a bundle
