--- a/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
+++ b/src/main/java/org/kettle/beam/metastore/messages/messages_en_US.properties
@@ -32,7 +32,7 @@ BeamJobConfigDialog.XpPluginClasses.Button = Find
 
 BeamJobConfigDialog.FatJar.Label = Fat jar (file location) to use for execution
 BeamJobConfigDialog.FatJar.Button = Build
-BeamJobConfigDialog.StreamingKettleStepsFlushInterval.Label = Streaming flush interval for buffered step data (s)
+BeamJobConfigDialog.StreamingKettleStepsFlushInterval.Label = Streaming flush interval for buffered step data (ms)
 
 BeamJobConfigDialog.GcpProjectId.Label = Project ID
 BeamJobConfigDialog.GcpAppName.Label = App name
